--- a/molflash/proppred/regression/proppredConfig.yaml
+++ b/molflash/proppred/regression/proppredConfig.yaml
@@ -1,7 +1,7 @@
 config:
     modelType: regression
     modelName: "GCN"
-    filePath: "/content/dataset.csv"
+    filePath: "/home/bayeslabs/molFlash/molflash/proppred/regression/maob_reg.csv"
     optimizer: optim.Adam
     learning_rate: 0.0001
     batch_size: 10
